[workspace]
resolver = "2"
members = [ "pwned_pwd", "pwned_pwd_core","pwned_pwd_downloader", "pwned_pwd_store", "pwned_pwd_store_local"]

[profile.test]
debug = 2

[workspace.dependencies]

tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

hex-literal = { version = "0.4" }
hex = { version = "0.4" }

reqwest = { version = "0.11", features = ["stream"] }
thiserror = { version = "1" }
url = { version = "2" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json"] }
pin-project-lite = { version = "0.2" }