[package]
name = "pwned_pwd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwned_pwd_core = { path = "../pwned_pwd_core" }
pwned_pwd_downloader = { path = "../pwned_pwd_downloader" }
pwned_pwd_store = { path = "../pwned_pwd_store" }

futures = { workspace = true }
pin-project-lite = { workspace = true }
