[package]
name = "pwned_pwd_core"
version = "0.1.0"
edition = "2021"

[features]
store-local = []

[dependencies]
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

reqwest = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }

pin-project-lite = { workspace = true }


[dev-dependencies]

hex-literal = { workspace = true }
tracing-subscriber = { workspace = true }