[package]
name = "pwned_pwd_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwned_pwd_core = { path = "../pwned_pwd_core" }

tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
