[package]
name = "pwned_pwd_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwned_pwd_core = { path = "../pwned_pwd_core" }

reqwest = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

hex-literal = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }
