[package]
name = "pwned_pwd_store_local"
version = "0.1.0"
edition = "2021"


[dependencies]

pwned_pwd_core = { path = "../pwned_pwd_core" }
pwned_pwd_store = { path = "../pwned_pwd_store" }

futures = { workspace = true }

[dev-dependencies]

hex-literal = { workspace = true }
tokio = { workspace = true }
